--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "checkJs": true, // Enables type checking for JavaScript files
+    "checkJs": true, // Enables type checking for JS files
     "module": "commonjs", // Jest uses CommonJS
     "baseUrl": ".", // Base URL for resolving modules
     "paths": {
